# tsunami

./: Cargo.toml  LICENSE  deny.toml  flake.nix
.github/workflows/: rust.yml
benches/: misc.rs  tsunami_bin.rs  tsunami_text.rs
src/: args.rs  color.rs  config.rs  lib.rs  main.rs  paths.rs  pixel.rs  protocol.rs
src/protocol/: binary.rs  flutties.rs  palette.rs  text.rs
