[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

[dependencies]
atoi_radix10 = "0.0.1"
bytes = "1.6.0"
hex = "0.4.3"
tokio = { version = "*", features = ["full"] }
tokio-test = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

