[package]
name = "tsunami"
version = "0.1.0"
edition = "2021"

clap = { version = "*", features = ["derive"] }
clap-serde-derive = "*"
colored = "*"
crossterm = "*"
dirs = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
toml = "*"

[dev-dependencies]
tempfile = "*"
test-case = "*"
criterion = "*"
rand = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
atoi_radix10 = "0.0.1"
clap = "4.5.19"
clap-serde-derive = "0.2.1"
colored = "2.1.0"
crossterm = "0.28.1"
dirs = "5.0.1"
rand = "*"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
ufmt = { version = "0.2.0", features = ["std"] }
